--- a/Devoir 1/customer-service/src/main/resources/application.properties
+++ b/Devoir 1/customer-service/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-
+server.port=8082
+spring.application.name=CUSTOMER-SERVICE
+spring.h2.console.enabled=true
+#pas besoin de s'enregister dans discovery service
+spring.cloud.discovery.enabled=false
+spring.datasource.url=jdbc:h2:mem:customer-db
