--- a/Devoir 1/billing-service/pom.xml
+++ b/Devoir 1/billing-service/pom.xml
@@ -56,6 +56,13 @@
             <artifactId>mapstruct</artifactId>
             <version>1.4.2.Final</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-starter-openfeign -->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-openfeign</artifactId>
+            <version>3.1.4</version>
+        </dependency>
+
     </dependencies>
     <dependencyManagement>
         <dependencies>
