Securing Microservices Architecture with Keycloak

--- a/Devoir 3/order-service/src/main/resources/application.properties
+++ b/Devoir 3/order-service/src/main/resources/application.properties
@@ -6,3 +6,9 @@ logging.level.ma.enset.orderservice.service.CustomerRestClientService=debug
 logging.level.ma.enset.orderservice.service.InventoryRestClientService=debug
 #logger headers,request,respense c.à.d tt la requette
 feign.client.config.default.loggerLevel=full
+
+keycloak.realm=wallet-realm
+keycloak.resource=wallet-client
+keycloak.bearer-only=true
+keycloak.auth-server-url=http://localhost:8080
+keycloak.ssl-required=none
