--- a/Devoir 3/inventory-service/src/main/resources/application.properties
+++ b/Devoir 3/inventory-service/src/main/resources/application.properties
@@ -1,3 +1,8 @@
 server.port=8082
 spring.application.name=inventory-service
 spring.config.import=optional:configserver:http://localhost:8888
+keycloak.realm=wallet-realm
+keycloak.resource=wallet-client
+keycloak.bearer-only=true
+keycloak.auth-server-url=http://localhost:8080
+keycloak.ssl-required=none
